fix Header covered on scroll added navbar z-index

--- a/css/globals/header.css
+++ b/css/globals/header.css
@@ -5,7 +5,9 @@
     position: fixed;
     top: 0;
     transition: top 0.3s;
+    z-index: 10;
 }
+
 
 .nav {  
     width: 100%;
